--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -3,15 +3,13 @@
 {% block title %}Password reset successful{% endblock %}
 
 {% block content %}
-<div class="background-img">
-    <div class="d-flex">
-        <div class="row m-auto">
-            <div class="card card-signin my-5 col-sm-12">
-                <div class="card-body mt-4">
-                    <div class="col-sm-12">
-                        <p>We've sent you an email with instructions for setting your new password to the e-mail address you have.<br />
-                        You should receiving it shortly.</p>
-                    </div>
+<div class="d-flex">
+    <div class="row m-auto">
+        <div class="card card-signin my-5 col-sm-12 alert alert-dark">
+            <div class="card-body mt-4">
+                <div class="col-sm-12">
+                    <p>We've sent you an email with instructions for setting your new password to the e-mail address you have.<br />
+                    You should receiving it shortly.</p>
                 </div>
             </div>
         </div>
