--- a/products/templates/more_products.html
+++ b/products/templates/more_products.html
@@ -13,7 +13,7 @@
         <div class="col-sm-12 col-md-6 col-lg-4 mt-5">
             <a href='/products/{{ product.slug }}'>
                 <div class="card card-body">
-                    <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+                    <div class="card-img-top product-image mb-1" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
                         <h5 class="card-title text-uppercase">{{ product.name }}</h5>
                         <p class="card-text fa fa-dollar">{{ product.price }}</p>
                 </div>
