--- a/products/templates/product_view.html
+++ b/products/templates/product_view.html
@@ -6,33 +6,34 @@
 
 <!-- product content -->
 {% block content %}
-    <!-- Name -->
 <div class="row row-flex justify-content-center">
-    <div class="mt-5 col-sm-12 col-md-10 col-lg-10 align-items-center">
-    <h3>{{ product.name }}</h3>
-
+    <div class="mt-5 col-sm-12 col-md-10 col-lg-10 align-items-left">
+<!-- Name -->
+    <div class="mt-5 mb-5">
+        <h3>{{ product.name }}</h3>
+    </div>
 <!-- image -->
-    <div class="align-items-left mt-5 mb-5">
+    <div class="mt-5 mb-5">
         <div class="product-image-view" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
     </div>
 
 <!-- Price -->
-    <div class=" align-items-left ">
+    <div class="">
         <p><strong>Price: </strong><span class="fa fa-dollar"></span>{{ product.price }}</p>
     </div>
 <hr>
 
 <!-- Qty, and add to cart -->
-    <div class="align-items-left col-sm-8 col-md-6 col-lg-4 mb-5">
+    <div class=" col-sm-8 col-md-6 col-lg-6 mb-5">
     <form method="post" action="{% url 'add_to_cart' product.id %}">
-                {% csrf_token %}
-                <div class="input-group">
-                    <input name="quantity" type="number" min="1" max="50" class="form-control quantity" placeholder="Qty" required>
-                    <span class="input-group-btn">
-                        <button class="btn btn-warning addToCart" type="submit"><i class="fa fa-plus mr-1"></i>Add To Cart</button>
-                    </span>
-                </div>
-            </form>
+        {% csrf_token %}
+        <div class="input-group">
+            <input name="quantity" type="number" min="1" max="50" class="form-control quantity" placeholder="Qty" required>
+            <span class="input-group-btn">
+                <button class="btn btn-warning addToCart" type="submit"><i class="fa fa-plus mr-1"></i>Add To Cart</button>
+            </span>
+        </div>
+    </form>
     </div>
 
         <!-- Description -->
