--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -6,7 +6,7 @@
 <div class="img"></div>
 <!-- About  -->
 <div class="row">
-    <div class="container col-sm-12 col-md-10 col-lg-8 text-center text-justify text-break my-5 py-5 font-weight-bolder alert alert-dark about_us">
+    <div class="container col-sm-12 col-md-10 col-lg-8 text-center text-justify text-break my-5 py-5 font-weight-bolder alert alert-warning about_us">
         <p>iShop is an online mobile store. Offer various phones products.
         Browse our store for the phone you like, add it to your cart, and we will make
         the delivery within 2 to 3 weeks after making the pyment. 
@@ -19,7 +19,7 @@
         <div class="col-sm-12 col-md-6 col-lg-4">
              <a href='/products/{{ product.slug }}'>
                 <div class="card card-body mt-5 mb-5 mr-4 ml-4">
-                    <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+                    <div class="card-img-top product-image mb-1" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
                         <h5 class="card-title text-uppercase">{{ product.name }}</h5>
                         <p class="card-text fa fa-dollar">{{ product.price }}</p>
                 </div>
