--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -7,6 +7,7 @@
 {% block page_title %}Registration Page{% endblock %} 
  
 {% block content %}
+<!-- Registration form -->
 <div class="d-flex justify-content-center">
     <div class="row m-auto">
         <div class="card card-signin my-5 col-sm-12 alert alert-dark">
