--- a/contact/templates/email.html
+++ b/contact/templates/email.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<!-- templates/email.html -->
+<!-- Contact us template -->
 <div class="bg-dark">
     <div class="d-flex justify-content-start align-items-center">
         <div class="row m-auto">
