--- a/products/templates/product_view.html
+++ b/products/templates/product_view.html
@@ -36,8 +36,10 @@
     </form>
     </div>
 
-        <!-- Description -->
-            <div class="col">
+        <!-- Brand, year, and Description -->
+            <div>
+                <p><strong>Brand</strong> <br>{{ product.brand }}</p>
+                <p><strong>Year</strong> <br>{{ product.year }}</p>
                 <p><strong>Description</strong> <br>{{ product.description }}</p>
             </div>
     <hr>
