--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -6,14 +6,21 @@
 <div class="img"></div>
 <!-- About  -->
 <div class="row">
-    <div class="container col-sm-12 col-md-10 col-lg-8 text-center text-justify text-break my-5 py-5 font-weight-bolder alert alert-warning about_us">
-        <p>iShop is an online mobile store. Offer various phones products.
-        Browse our store for the phone you like, add it to your cart, and we will make
-        the delivery within 2 to 3 weeks after making the pyment. 
-        </p>
+    <div class="container col-sm-12 col-md-10 col-lg-8 text-center text-justify text-break py-2 font-weight-bolder h5 alert alert-secondary">
+        <p>iShop is an online mobile store. Offer various phones products.</p>
     </div>
 </div>
 <hr class="my-5">
+<!-- Steps to iShop -->
+<div class="container">
+    <div class="row text-danger font-weight-bolder h5">
+        <div class="col-6 col-md-4"><i class="fa fa-mobile mr-1"></i>1. Search for your wish phone</div>
+        <div class="col-6 col-md-4"><i class="fa fa-plus mr-1"></i>2. Add it to your cart</div>
+        <div class="col-6 col-md-4"><i class="fa fa-truck mr-1"></i>3. Will be deliver to you within 10 days</div>
+    </div>
+</div>
+<hr>
+<!-- Products  -->
 <div class="row row-flex main-products-background">
     {% for product in products %}
         <div class="col-sm-12 col-md-6 col-lg-4">
@@ -27,11 +34,12 @@
         </div>
      {% endfor %}
 </div>
+<!-- Button to all products -->
 <div class="text-center mt-5 mb-5">
     <a class="btn btn-danger my-2 my-sm-0 text-uppercase" href="{% url 'more_products' %}"><i class="fa fa-search-plus mr-1"></i>See More Products</a>
 </div>
 <hr class="mt-5 mb-5"></hr>
 <div class="container text-center mt-5 mb-5">
-        <p class="alert alert-dark">Thank you for visiting iShop!</p>
+    <p class="alert alert-dark">Thank you for visiting iShop!</p>
 </div>
 {% endblock %}
