--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -3,5 +3,6 @@
 {% block title %}Password reset complete{% endblock %}
 
 {% block content %}
+<!-- After completing password reset -->
 <p>Your password has been set. Please <a href="{{ login_url }}">Login</a></p>
 {% endblock %}
