--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -3,6 +3,7 @@
 {% block title %}Setting New password{% endblock %}
 
 {% block content %}
+<!-- New passowrd form -->
     {% if validlink %}
         <p>Please enter your new password</p>
         <form action="" method="post" class="accountform">
