--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -3,6 +3,7 @@
 {% block title %}Password reset successful{% endblock %}
 
 {% block content %}
+<!-- If email in db send email and disply below -->
 <div class="d-flex">
     <div class="row m-auto">
         <div class="card card-signin my-5 col-sm-12 alert alert-dark">
