--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -3,6 +3,7 @@
 {% block page_title %}Password Reset Page{% endblock %}
 
 {% block content %}
+<!-- Passowrd reset form -->
 <div class="d-flex">
     <div class="row m-auto">
         <div class="card card-signin my-5 col-sm-12 alert alert-dark">
