--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -7,6 +7,7 @@
 {% block page_title %}Login Page{% endblock %} 
  
 {% block content %}
+<!-- Login form -->
 <div class="d-flex">
     <div class="row m-auto">
         <div class="card card-signin my-5 col-sm-12 alert alert-dark">
