--- a/products/templates/more_products.html
+++ b/products/templates/more_products.html
@@ -9,7 +9,7 @@
 <hr class="red-line mt-3 mb-3">
 <!-- All Product display -->
 <div class="row row-flex">
-    {% for product in products %}
+    {% for product in products.object_list  %}
         <div class="col-sm-12 col-md-6 col-lg-4 mt-5">
             <a href='/products/{{ product.slug }}'>
                 <div class="card card-body">
@@ -21,9 +21,23 @@
         </div>
      {% endfor %}
 </div>
+<!-- pagination -->
 <hr>
-<div class="text-center mt-5 mb-5">
-<a class="btn btn-danger my-2 my-sm-0 text-uppercase" href="{% url 'products' %}"><i class="fa fa-backward mr-1"></i>Go Back</a>
-</div>
-</hr>
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+        {% if products.has_previous %}
+        <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number}} ">Previous</a></li>
+        {% endif %}
+        {% for pg in products.paginator.page_range %}
+            {% if products.number == pg %}
+                <li class="page-item active"><a class="page-link" href="?page={{ pg }}">{{ pg }}</a></li>
+            {% else %}
+                <li class="page-item"><a class="page-link" href="?page={{pg}}">{{pg}}</a></li>
+            {% endif %}
+        {% endfor %}
+        {% if products.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{products.next_page_number}}">Next</a></li>
+        {% endif %}
+    </ul>
+</nav>
 {% endblock %}
