--- a/products/templates/search_results.html
+++ b/products/templates/search_results.html
@@ -7,6 +7,7 @@
     <h1>your search results</h1>
 </div>
 <hr class="red-line">
+<!-- Search results -->
 {% if products %}
     <div class="row row-flex main-products-background">
         {% for product in products %}
