--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,4 +1,5 @@
 {% autoescape off %}
+<!-- Email content for password reset -->
     Hi there,
 
     You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.
