--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -15,7 +15,7 @@
                     <p class="text-capitalize mt-5 mb-2">Hi! {{ profile.username }}</p>
                     <p class="mt-3 mb-5">Your Email address: {{ profile.email }}</p>
                     <hr class="mt-3 mb-5">
-                    <!-- Usuful links for the user -->
+                    <!-- useful links for the user -->
                     <div class="mb-2 profile-items">
                         <a class="btn btn-danger my-2 my-sm-0 text-uppercase" href="{% url 'logout' %}">Logout</a>
                         <a class="btn btn-success my-2 my-sm-0 text-uppercase" href="{% url 'more_products' %}">Products</a>
@@ -26,7 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="container text-center mt-5 mb-5">
+    <div class="container text-center my-5">
         <p class="bg-dark text-white py-3">Thank you for being with iShop!</p>
     </div>
 </div>
