--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,22 +1,50 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %}iShop{% endblock %}
 
 {% block content %}
-<div class="img"></div>
+<!-- Slide show --> 
+<div id="slides" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#slides" data-slide-to="0" class="active"></li>
+    <li data-target="#slides" data-slide-to="1"></li>
+    <li data-target="#slides" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{% static "images/black-iphone-7.jpg" %}" class="d-block w-100" alt="SlideImage1">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static "images/space-gray-iphone-6.jpg" %}" class="d-block w-100" alt="SlideImage2">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static "images/silver-iphone-x.jpg" %}" class="d-block w-100" alt="SlideImage3">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 <!-- About  -->
 <div class="row">
-    <div class="container col-sm-12 col-md-10 col-lg-8 text-center text-justify text-break py-2 font-weight-bolder h5 alert alert-secondary">
+    <div class="container col-sm-12 col-md-10 col-lg-8 text-center text-justify text-break py-2 mt-5 font-weight-bolder h5">
         <p>iShop is an online mobile store. Offer various phones products.</p>
     </div>
 </div>
-<hr class="my-5">
+<hr class="my-3">
 <!-- Steps to iShop -->
 <div class="container">
     <div class="row text-danger font-weight-bolder h5">
-        <div class="col-6 col-md-4"><i class="fa fa-mobile mr-1"></i>1. Search for your wish phone</div>
-        <div class="col-6 col-md-4"><i class="fa fa-plus mr-1"></i>2. Add it to your cart</div>
-        <div class="col-6 col-md-4"><i class="fa fa-truck mr-1"></i>3. Will be deliver to you within 10 days</div>
+        <div class="col-6 col-md-4"><i class="fa fa-mobile mobile-icon mr-1"></i>1. Search for your wish phone</div>
+        <div class="col-6 col-md-4"><i class="fa fa-plus plus-icon mr-1"></i>2. Add it to your cart</div>
+        <div class="col-6 col-md-4"><i class="fa fa-truck truck-icon mr-1"></i>3. Will be deliver to you within 10 days</div>
     </div>
 </div>
 <hr>
