--- a/products/templates/search_results.html
+++ b/products/templates/search_results.html
@@ -12,13 +12,17 @@
     <div class="row row-flex main-products-background">
         {% for product in products %}
             <div class="col-sm-12 col-md-6 col-lg-4">
-                <a href='/products/{{ product.slug }}'>
-                    <div class="card card-body mt-5 mb-5 mr-4 ml-4">
-                        <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
-                        <h5 class="card-title text-uppercase">{{ product.name }}</h5>
-                        <p class="card-text fa fa-dollar">{{ product.price }}</p>
+                <div class="row row-flex justify-content-center">
+                    <div class="mt-5 col-sm-12 col-md-10 col-lg-10 align-items-center">
+                        <a href='/products/{{ product.slug }}'>
+                            <div class="card card-body mt-5 mb-5 mr-4 ml-4">
+                                <div class="card-img-top product-image" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+                                <h5 class="card-title text-uppercase">{{ product.name }}</h5>
+                                <p class="card-text fa fa-dollar">{{ product.price }}</p>
+                            </div>
+                        </a>
                     </div>
-                </a>
+                </div>
             </div>
         {% endfor %}
     </div>
