Bootstrap style for password reset confirm and complete.

--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -4,5 +4,13 @@
 
 {% block content %}
 <!-- After completing password reset -->
-<p>Your password has been set. Please <a href="{{ login_url }}">Login</a></p>
+<div class="d-flex">
+    <div class="row m-auto">
+        <div class="card card-signin my-5 col-sm-12 alert alert-dark">
+            <div class="card-body mt-4">
+                <p>Your password has been set. Please <a  href="{{ login_url }}" class="btn btn-outline-info">Login</a></p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
