--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -4,31 +4,39 @@
 
 {% block content %}
 <!-- New passowrd form -->
-    {% if validlink %}
-        <p>Please enter your new password</p>
-        <form action="" method="post" class="accountform">
-            <div style="display:none">
-                <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+<div class="d-flex">
+    <div class="row m-auto">
+        <div class="card card-signin my-5 col-sm-12 alert alert-dark">
+            <div class="card-body mt-4">
+                {% if validlink %}
+                    <p>Please enter your new password</p>
+                    <form action="" method="post" class="accountform">
+                        <div style="display:none">
+                            <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+                        </div>
+                        <table>
+                            <tr>
+                                <td>{{ form.new_password1.errors }}
+                                    <label for="id_new_password1">New password:</label></td>
+                                <td>{{ form.new_password1 }}</td>
+                            </tr>
+                            <tr>
+                                <td>{{ form.new_password2.errors }}
+                                    <label for="id_new_password2">Confirm password:</label></td>
+                                <td>{{ form.new_password2 }}</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td><input type="submit" value="Change password"/></td>
+                            </tr>
+                        </table>
+                    </form>
+                {% else %}
+                    <h1>Ops! the password reset was unsuccessful</h1>
+                    <p>Please request a new password reset.</p>
+                {% endif %}
             </div>
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Change password"/></td>
-                </tr>
-            </table>
-        </form>
-    {% else %}
-        <h1>Ops! the password reset was unsuccessful</h1>
-        <p>Please request a new password reset.</p>
-    {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock %}
