Moving searching based on various fields into search results page. Added some padding around content. Fixed typo.

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -9,7 +9,7 @@
 <!-- cart content -->
 {% block content %}
 <div class="row row-flex justify-content-center">
-    <div class="mt-5 col-sm-12 col-md-10 col-lg-10 align-items-center">
+    <div class="mt-5 px-5 col-sm-12 col-md-10 col-lg-10 align-items-center">
         <div class="text-danger text-capitalize">
             <h1>your shopping list</h1>
          </div>
