--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -20,7 +20,7 @@
 {% block content %}
 <!-- Order summary page in checkout -->
 <div class="row row-flex justify-content-center">
-    <div class="mt-5 col-sm-12 col-md-10 col-lg-10 align-items-center">
+    <div class="mt-5 px-4 col-sm-12 col-md-10 col-lg-10 align-items-center">
         <div class="text-danger text-capitalize">
             <h1>your order summary</h1>
         </div>
