--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -27,7 +27,7 @@
 <!-- About  -->
 <div class="row">
     <div class="container col-sm-12 col-md-10 col-lg-8 text-center text-justify text-break py-2 mt-5 font-weight-bolder h5">
-        <p>iShop is an online mobile store. Offer various phones products.</p>
+        <p>iShop is an online mobile store. Offer various smartphones' products.</p>
     </div>
 </div>
 <hr class="my-3">
@@ -36,7 +36,7 @@
     <div class="row text-danger font-weight-bolder h5">
         <div class="col-6 col-md-4"><i class="fa fa-mobile mobile-icon mr-1"></i>1. Search for your wish phone</div>
         <div class="col-6 col-md-4"><i class="fa fa-plus plus-icon mr-1"></i>2. Add it to your cart</div>
-        <div class="col-6 col-md-4"><i class="fa fa-truck truck-icon mr-1"></i>3. Will be deliver to you within 10 days</div>
+        <div class="col-6 col-md-4"><i class="fa fa-truck truck-icon mr-1"></i>3. Will be delivered to you within 10 days</div>
     </div>
 </div>
 <hr>
