--- a/products/templates/product_view.html
+++ b/products/templates/product_view.html
@@ -7,7 +7,7 @@
 <!-- product content -->
 {% block content %}
 <div class="row row-flex justify-content-center">
-    <div class="mt-5 col-sm-12 col-md-10 col-lg-10 align-items-left">
+    <div class="mt-5 px-4 col-sm-12 col-md-10 col-lg-10 align-items-left">
 <!-- Name -->
     <div class="mt-5 mb-5">
         <h3>{{ product.name }}</h3>
