--- a/templates/base.html
+++ b/templates/base.html
@@ -47,9 +47,7 @@
             <!-- Search -->
             <div class="row">
             <form class="form-inline my-lg-0 justify-content-end" action="{% url 'search' %}" method="GET">
-                <input class="form-control mb-1 col-lg-3 mr-sm-2" type="search" placeholder="Name" name="q">
-                <input class="form-control mb-1 col-lg-3 mr-sm-2" type="search" placeholder="Brand" name="brand"/>
-                <input class="form-control mb-1 col-lg-2 mr-sm-2" type="search" placeholder="Year" name="year"/>
+                <input class="form-control mb-1 mr-sm-2" type="search" placeholder="Search" name="q">
                 <button class="btn btn-outline-success mr-3" type="submit"><i class="fa fa-search mr-1"></i>Search</button>
             </form>
             </div>
